// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vault instance - updateIdentity updates existing identity 1`] = `
Array [
  Object {
    "address": "sapling-new-updated-address",
    "keys": Object {
      "sk": "saturn-spending-key",
      "tpk": "saturn-transparent-private-key",
    },
    "name": "Saturn",
    "transparentAddress": "saturn-t-address",
  },
  Object {
    "address": "mars-address-zcash",
    "keys": Object {
      "sk": "mars-spending-key",
      "tpk": "mars-transparent-private-key",
    },
    "name": "Mars",
    "transparentAddress": "mars-t-address",
  },
  Object {
    "address": "jupiter-address-zcash",
    "keys": Object {
      "sk": "jupiter-spending-key",
      "tpk": "jupiter-transparent-private-key",
    },
    "name": "Jupiter",
    "transparentAddress": "jupiter-t-address",
  },
]
`;

exports[`vault instance creates identity 1`] = `undefined`;

exports[`vault instance list channels when contains channels 1`] = `
Array [
  Object {
    "address": "zs1testaddress3",
    "description": "Channel about 3",
    "keys": Object {
      "ivk": "incoming-viewing-key-3",
    },
    "name": "Channel 3",
    "private": true,
    "unread": 3,
  },
  Object {
    "address": "zs1testaddress2",
    "description": "",
    "keys": Object {
      "ivk": "incoming-viewing-key-2",
    },
    "name": "Channel 2",
    "private": true,
    "unread": 2,
  },
  Object {
    "address": "zs1testaddress1",
    "description": "Channel about 1",
    "keys": Object {
      "ivk": "incoming-viewing-key-1",
    },
    "name": "Channel 1",
    "private": true,
    "unread": 1,
  },
]
`;

exports[`vault instance lists identities 1`] = `
Array [
  Object {
    "address": "saturn-address-zcash",
    "keys": Object {
      "sk": "saturn-spending-key",
      "tpk": "saturn-transparent-private-key",
    },
    "name": "Saturn",
    "transparentAddress": "saturn-t-address",
  },
  Object {
    "address": "mars-address-zcash",
    "keys": Object {
      "sk": "mars-spending-key",
      "tpk": "mars-transparent-private-key",
    },
    "name": "Mars",
    "transparentAddress": "mars-t-address",
  },
  Object {
    "address": "jupiter-address-zcash",
    "keys": Object {
      "sk": "jupiter-spending-key",
      "tpk": "jupiter-transparent-private-key",
    },
    "name": "Jupiter",
    "transparentAddress": "jupiter-t-address",
  },
]
`;

exports[`vault instance returns created vault 1`] = `
Vault {
  "channels": Object {
    "importChannel": [Function],
    "listChannels": [Function],
  },
  "lock": [MockFunction],
  "withWorkspace": [Function],
}
`;
